Protected endpoint (#3)
* docs

* protected endpoint

* rm bin
