# auth/http/handler.go
@@ -2,13 +2,13 @@ package http
 
 import (
 	"github.com/gistsapp/api/auth/core"
+	"github.com/gistsapp/api/types"
 	"github.com/gofiber/fiber/v2"
 )
 
 type Handler interface {
 	Register(app *fiber.App)
 }
-
 
 type HTTPTokens struct {
 	AccessToken  string `json:"access_token"`
@@ -22,6 +22,13 @@ type HTTPErrorMessage struct {
 type HTTPMessage struct {
 	Message string `json:"message"`
 }
+
+type HTTPUserIntrospection struct {
+	User              *types.User              `json:"user"`
+	Claims            *types.JWTClaims         `json:"claims"`
+	FederatedIdentity *types.FederatedIdentity `json:"federated_identity"`
+}
+
 type handler struct {
 	jwtService core.JWTService
 }
